Added temperature/pressure sensor (still needs testing). Added IP Address print out. Added start of Camera access (still under dev).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Things Experiments</string>
+    <string name="ip_address">IP Address: </string>
 </resources>
