--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="latitude">Latitude:</string>
     <string name="pressure">Air Pressure:</string>
     <string name="temperature">Temperature:</string>
+    <string name="motion">motion</string>
 </resources>
